2011-09-26 Sancho Lerena <slerena@artica.es>

	* pandora_console/index.php: Developer mode disabled. 
	Ready for 4.0 release !

2011-09-26 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Fixed a problem with graphs which
	shows only a few points instead of all of them.

2011-09-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed height style attribute in step 3. 

2011-09-25 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: added api call "set_validate_event".
	
	* include/api.php: fixed the login process for do more Pandora standar.

2011-09-23 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: added the code for the return the more
	criticity event in the API call "get_events".

2011-09-23  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Update version and DB Build.

	* DEBIAN/control,
	DEBIAN/make_deb_package.sh
	include/config.php
	include/config_process.php
	pandora_console_install
	install.php
	pandora_console.spec
	pandora_console.redhat.spec: Updated version.

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Update version after
	migrate.

2011-09-23 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php: fixed the query for to don't show
	the "not_init" modules.

2011-09-23 Tomas Palacios <tomas.palacios@artica.es>

	* include/languages: Updated language files.

2011-09-22 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the lost check for the timestamps in the
	"get_events" call.

2011-09-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_monitores.php: Erased traces and db_clean_cache().
	
2011-09-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added btree index on table
	tagente_modulo.

2011-09-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
